--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:m52overview": "npm-run-all build:public:data:m52-strings build:m52overview:script",
     "build:m52overview:script": "browserify src/m52-overview/js/main.js -o build/m52-overview-bundle.js -d",
     "build-preprod": "cross-env GIRONDE_FR_DRUPAL_MEDIA_ID=2459 npm run build-gironde-fr:public",
-    "build-production": "cross-env GIRONDE_FR_DRUPAL_MEDIA_ID=2459 npm run build-gironde-fr:public",
+    "build-production": "cross-env GIRONDE_FR_DRUPAL_MEDIA_ID=2459 npm run build-CDC_CA:public",
     "build-gironde-fr:public": "cross-env NODE_ENV=production npm-run-all build:public:data:* build:public:style build:public:script",
     "build-demo:public": "npm-run-all build:public:data:* build:public:style build:public:script",
     "build:public:style": "node-sass --importer src/public/style/env-importer.js src/public/style/main.scss build/public.css",
